# sdlGUI

./: CMakeLists.txt  main_test.cpp
include/: GUI_header.h  button.h  push_button.h  screen.h  sdlGUI.h  section.h  widget.h
src/: button.cpp  push_button.cpp  screen.cpp  section.cpp  widget.cpp
